# informationSearch

./: .gitignore  README.md  docker-compose.yaml
homework1/: report.md  отчет1.docx
homework2/: Dockerfile  config.yaml  crawler.py  отчет2.docx
homework3/: CMakeLists.txt  Dockerfile  main.cpp  отчет3.docx
